--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1646,7 +1646,128 @@
 		"Task_title_cant_be_empty":"Task title can't be empty",
 		"Plz_select_a_Patient":"Please select a Patient",
 		"renameStep":"Rename step",
-		"Citizenship": "Citizenship"
+		"Citizenship": "Citizenship",
+
+		"view_detail":"View Detail",
+		"approved":"Approve",
+		"headache":"headache",
+		"headache_body_temp":"Body Temperature",
+		"headache_need_to_vomit":"Headache need to vomit",
+		"headache_onset_of_pain":"Headache onset of pain",
+		"pain_levelsss":"Pain intensity",
+		"quality_of_pain":"Quality Pain",
+		"feel_depressed":"Depressed",
+		"cough":"Fever cough",
+		"fever_cold":"Fever cold",
+		"fever_hoarseness":"Fever hoarseness",
+		"fever_low_body_temp":"Low value Temperature",
+		"fever":"Fever",
+		"fever_pain_intensity":"Fever pain intensity",
+		"fever_sputum":"Fever sputum",
+		"fever_symptoms_begin":"Fever symptoms begin",
+		"fever_top_body_temp":"Top value Temperature ",
+		"hurtnow":"Hurt now",
+		"headache_hurtnow_back":"Back",
+		"headache_hurtnow_front":"Front",
+		"headache_hurtnow_left":"Left",
+		"headache_hurtnow_right":"Right",
+		"headache_hurtnow_top":"Top",
+		"Pain_begin":"Pain begin",
+		"headache_painbegin_back":"Back",
+		"headache_painbegin_front":"Front",
+		"headache_painbegin_left":"Left",
+		"headache_painbegin_right":"Right",
+		"headache_painbegin_top":"Top",
+		"headache_take_painkillers":"Painkiller",
+		"headache_undergoing_treatment":"Headache treatment",
+		"Stomach_Problems":"Stomach Pain",
+		"stomach_sternum":"Stomach sternum",
+		"stomach_temp":"Stomach temp",
+		"stomach_periodically":"Stomach periodically",
+		"stomach_attack":"Stomach attack",
+		"stomach_diabetes":" Stomach diabetes",
+		"stomach_failure":"Stomach failure",
+		"stomach_undergoing_treatment":"Stomach treatment",
+		"stomach_take_painkillers":"Stomach painkillers",
+	   "stomach_intensity":"Stomach intensity",
+	   "back_pain":"Back pain",
+	   "back_injured":"Back injured",
+	   "back_pain_have_diabetes":"Back pain diabetes",
+	   "back_attack":"Heart attack",
+	   "back_failure":"Back failure",
+	   "back_strained":"Back strained",
+	   "back_depression":"Stress / Depression",
+	   "back_symptoms_begin":"Symptoms begin",
+	   "cardiac_dizziness":"Cardiac dizziness",
+	   "cardiac_shoulder_pain":"Shoulder pain",
+	   "cardiac_heart_attack":"Heart attack",
+	   "cardiac_heart_failure":"Heart failure",
+	   "cardiac_problems":"Cardiac problems",
+	   "cough_and_snees":"Cough and Snees",
+	   "cough_suffer_symtoms":"Suffer from the same symtoms",
+	   "cough_allergies":"Cough allergies",
+	   "cough_symptoms_begin":"Cough symptoms begin",
+	   "depressed_do_you_sleep":"Sleep",
+	   "depressed_hurt_yourself":"Hurt yourself",
+	   "depressed_suicidal_thoughts":"Suicidal thoughts",
+	   "depressed_symptoms_begin":"Depressed symptoms begin",
+	  "diarrhea":"Diarrhea",
+	  "diarrhea_suffer_symtoms":"Suffer from same symtoms",
+	   "diarrhea_liquids":"Diarrhea liquids",
+	   "diarrhea_vomiting":"Diarrhea vomiting",
+	   "diarrhea_symptoms_begin":"Diarrhea symptoms begin",
+	  "diarrhea_body_temp":"Diarrhea body temp",
+	  "disability":"Disability  - ",
+	  "certification":"certification",
+	  "create":"Create",
+	  "Create_Certificate":"Create Certificate",
+	  "Join_Meeting":"Join Meeting",
+	  "AppointmentDate":"Appointment Date",
+	  "AppointmentTime":"Appointment Time",
+	  "Currently_available":"Currently available",
+	  "Not_available":"Not available",
+	  
+	  "Insurance_company":"Insurance company",
+	  "Name":"Name",
+	  "DOB":"DOB",
+	  "Insurance_Company":"Number Insurance Company",
+	  "Insurance_Person":"Insurance number of Person",
+	  "Status":"Status",
+	  "Hospital_Number":"Hospital Number",
+	  "Doctor_Number":"Doctor Number",
+	  "Date":"Date",
+	  "First_Certification":"First Time Certification",
+	  "Workincident":"Workincident / Result of Workincident",
+	  "Occupational_disease":"Occupational disease",
+	  "Continuation_of_certification":"Continuation of certification",
+	  "Sent_Special_Doctor":"Sent to a Special Doctor",
+	  "Assigned_doctor":"Assigned to the accident insurance doctor",
+	  "Imposible_since":"Imposible to work since",
+	  "most_until":"Most likely imposible to ",
+	  "work_until":"work until",
+	  "detected_at":"Detected at",
+	  "Stamp_Doctor":"Stamp and Signature ",
+	  "head_dr":"of the Doctor",
+	  "edit_picture_evaluation": "Edit Picture Evaluation",
+	  "pain_level": "Pain intensity",
+	  "body_temp": "Body temperature",
+	  "plz_enter_insurance_company":"Please enter insurance company",
+	  "plz_enter_first_name":"Please enter First name",
+	  "plz_enter_birth":"Please enter date of birth",
+	  "plz_enter_number_insurance":"Please enter number insurance company",
+	  "plz_enter_number_person":"please enter insurance number person",
+	  "plz_enter_status":"Please enter status",
+	  "plz_enter_hospital_number":"please enter hospital number",
+	  "plz_enter_doctor_number":"Please enter doctor number",
+	  "plz_enter_date":"Please enter date",
+	  "plz_enter_disability_certification":"Please enter disability certification",
+	  "plz_enter_imposible_since":"Please enter valid date for the imposible work to since",
+	  "plz_enter_imposs_work_until":"Please enter valid date for the imposible work until",
+	  "plz_enter_detected_at":"Please enter valid date for the detected at",
+	  "plz_attached_file":"Please attached the file"
+
+
+
 
 	}
 }
