worked on service page

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1878,7 +1878,8 @@
   "plz_enter_imposible_since":"Please enter valid date for the imposible work to since",
   "plz_enter_imposs_work_until":"Please enter valid date for the imposible work until",
   "plz_enter_detected_at":"Please enter valid date for the detected at",
-  "plz_attached_file":"Please attached the file"
+  "plz_attached_file":"Please attached the file",
+  "Sick_Certificate_Amount":"Sick Certificate Amount"
   
   
   
