worked on issues

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1751,7 +1751,7 @@
     "go_to_check_with_email": "Go to check with email",
     "Go_to_check_with_basic": "Go to check with basic informations",
     "go_back_to_check_with_email": "Go back to check with email",
-    "Sick_leave_cetificate":"Sick leave cetificate",
+    "Sick_leave_cetificate":"Sick leave certificate",
     "Step_name_already_exist":"Step name already exist",
     "Please_enter_case_number":"Please enter case number",
     "Please_select_step":"Please select step",
