worked on adminstaff and jira tickets

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1645,6 +1645,7 @@
 		"Plz_select_a_Patient":"Please select a Patient",
 		"renameStep":"Rename step",
 		"Citizenship": "Citizenship",
+		"edit_picture_evaluation": "Edit Picture Evaluation",
 		
 		
 		"Currently_available":"متاح حاليا",
