worked on jira tickets 793,794,795

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1335,7 +1335,7 @@
     "ChangeStaff": "Mitarbeiter wechseln",
     "AssignWardRoom": "Station/Zimmer zuweisen",
     "MovePatient": "Patient verschieben",
-    "Specialitycolor": "Farbe des Fachgebiets",
+    "Specialitycolor":"Farbe des Fachgebiets",
     "InvoiceID": "Rechnungs-ID",
     "CaseID": "Fall-ID",
     "Status": "Status",
@@ -1603,7 +1603,7 @@
     "Enterchoice": "Auswahl eingeben",
     "Enterquestion": "Frage eingeben",
     "Search_Select": "Suchen & Auswählen",
-    "AllSpecialities": "Alle Fachgebiete",
+    "AllSpecialities": "Alle Spezialitäten",
     "SelectStepName": "Bezeichnung des Schrittes auswählen",
     "Name": "Name",
     "Searchserviceoraddcustominput": "Dienstleistung suchen oder eigene Eingabe hinzufügen",
@@ -1803,6 +1803,10 @@
    "plz_enter_imposs_work_until":"Bitte geben Sie ein gültiges Datum für die unmögliche Arbeit bis ein",
    "plz_enter_detected_at":"Bitte geben Sie ein gültiges Datum für das erkannt um ein",
    "plz_attached_file":"Bitte die Datei anhängen",
-   "Sick_Certificate_Amount":"Betrag der Krankenscheine"
+   "Sick_Certificate_Amount":"Betrag der Krankenscheine",
+   "Birthday": "Geburtstag",
+   "Mobile_number": "Handynummer",
+   "Speciality_color":"Spezialität Farbe"
+    
       }
 }
