move dev to stagging

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -1645,7 +1645,7 @@
 		"Plz_select_a_Patient":"Please select a Patient",
 		"renameStep":"Rename step",
 		"Citizenship": "Citizenship",
-		"edit_picture_evaluation": "Edit Picture Evaluation",
+		"edit_picture_evaluation": "Edit Online Diagnose",
 		
 		
 		"Currently_available":"متاح حاليا",
