--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -1740,7 +1740,7 @@
 	  "detected_at":"Detected at",
 	  "Stamp_Doctor":"Stamp and Signature ",
 	  "head_dr":"of the Doctor",
-	  "edit_picture_evaluation": "Edit Picture Evaluation",
+	  "edit_picture_evaluation": "Edit Online Diagnose",
 	  "pain_level": "Pain intensity",
 	  "body_temp": "Body temperature",
 	  
