--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1748,7 +1748,7 @@
 	  "detected_at":"Detected at",
 	  "Stamp_Doctor":"Stamp and Signature ",
 	  "head_dr":"of the Doctor",
-	  "edit_picture_evaluation": "Edit Picture Evaluation",
+	  "edit_picture_evaluation": "Edit Online Diagnose",
 	  "pain_level": "Pain intensity",
 	  "body_temp": "Body temperature",
 	  "plz_enter_insurance_company":"Please enter insurance company",
